[gd_scene load_steps=32 format=3 uid="uid://clkr0j6if1cwa"]

[ext_resource type="Script" uid="uid://ckkac11hln8m3" path="res://Scripts/Player.gd" id="1_kk35u"]
[ext_resource type="Texture2D" uid="uid://kg05vjatjud8" path="res://Assest/Sunny-land-assets-files/PNG/sprites/player/hurt/player-hurt-1.png" id="2_5nnod"]
[ext_resource type="Texture2D" uid="uid://drrv0ds0d15p" path="res://Assest/Sunny-land-assets-files/PNG/sprites/player/hurt/player-hurt-2.png" id="3_qj287"]
[ext_resource type="Texture2D" uid="uid://dkuhu4txrtkny" path="res://Assest/AssetBundle/Sprites/Foxy.png" id="4_8c0k4"]
[ext_resource type="Texture2D" uid="uid://bbwot34yvw8u7" path="res://Assest/Sunny-land-assets-files/PNG/sprites/player/jump/player-jump-2.png" id="4_vbabq"]
[ext_resource type="Texture2D" uid="uid://b7dpf7wlsbh1c" path="res://Assest/Sunny-land-assets-files/PNG/sprites/player/idle/player-idle-1.png" id="5_jbdkm"]
[ext_resource type="Texture2D" uid="uid://tsmkf0uo3i5o" path="res://Assest/Sunny-land-assets-files/PNG/sprites/player/idle/player-idle-2.png" id="6_mexa7"]
[ext_resource type="Texture2D" uid="uid://bmbo586xok7l7" path="res://Assest/Sunny-land-assets-files/PNG/sprites/player/idle/player-idle-3.png" id="7_k2wt1"]
[ext_resource type="Texture2D" uid="uid://dir7gliqkig11" path="res://Assest/Sunny-land-assets-files/PNG/sprites/player/idle/player-idle-4.png" id="8_m5feg"]
[ext_resource type="Texture2D" uid="uid://bt4rly20dqxyi" path="res://Assest/Sunny-land-assets-files/PNG/spritesheets/player-jump.png" id="9_lng6d"]
[ext_resource type="Texture2D" uid="uid://cimqfreecbcdu" path="res://Assest/Sunny-land-assets-files/PNG/spritesheets/payer-run.png" id="10_mmtp0"]
[ext_resource type="PackedScene" uid="uid://dh04h45gavute" path="res://Scenes/UI/dash_arrow.tscn" id="11_4qv7n"]
[ext_resource type="AudioStream" uid="uid://cjgmxa75s53w5" path="res://Assest/AssetBundle/Audio/GameOver.mp3" id="12_jb7g2"]
[ext_resource type="AudioStream" uid="uid://cltub664ty6rj" path="res://Assest/SFX/Dash.mp3" id="14_0wgn0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0wgn0"]
atlas = ExtResource("4_8c0k4")
region = Rect2(0, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmbpy"]
atlas = ExtResource("4_8c0k4")
region = Rect2(33, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl3mf"]
atlas = ExtResource("4_8c0k4")
region = Rect2(66, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iw8x"]
atlas = ExtResource("4_8c0k4")
region = Rect2(99, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lupha"]
atlas = ExtResource("4_8c0k4")
region = Rect2(132, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnbur"]
atlas = ExtResource("4_8c0k4")
region = Rect2(165, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h8u3"]
atlas = ExtResource("9_lng6d")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi2kq"]
atlas = ExtResource("10_mmtp0")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfjar"]
atlas = ExtResource("10_mmtp0")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0hw5"]
atlas = ExtResource("10_mmtp0")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkc0x"]
atlas = ExtResource("10_mmtp0")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sljht"]
atlas = ExtResource("10_mmtp0")
region = Rect2(132, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ajbw"]
atlas = ExtResource("10_mmtp0")
region = Rect2(165, 0, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_12tcj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5nnod")
}, {
"duration": 1.0,
"texture": ExtResource("3_qj287")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wgn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmbpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl3mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iw8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lupha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnbur")
}],
"loop": true,
"name": &"end",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_vbabq")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_jbdkm")
}, {
"duration": 1.0,
"texture": ExtResource("6_mexa7")
}, {
"duration": 1.0,
"texture": ExtResource("7_k2wt1")
}, {
"duration": 1.0,
"texture": ExtResource("8_m5feg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h8u3")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi2kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfjar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0hw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkc0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sljht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ajbw")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lwt6d"]
size = Vector2(19, 25)

[sub_resource type="CircleShape2D" id="CircleShape2D_igdc3"]

[sub_resource type="GDScript" id="GDScript_d5fdy"]
script/source = "extends Node

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_kk35u")
jump_speed = 350
dash_speed = 500

[node name="Sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_12tcj")
animation = &"end"
frame_progress = 0.855897

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 4)
shape = SubResource("RectangleShape2D_lwt6d")

[node name="Camera2D" type="Camera2D" parent="."]
drag_left_margin = 0.5
drag_top_margin = 0.5
drag_right_margin = 0.5
drag_bottom_margin = 0.5

[node name="DashArea" type="Area2D" parent="."]
scale = Vector2(2, 2)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashArea"]
position = Vector2(-1, 4)
scale = Vector2(2.5, 2.5)
shape = SubResource("CircleShape2D_igdc3")
script = SubResource("GDScript_d5fdy")

[node name="DashArrow" parent="." instance=ExtResource("11_4qv7n")]
visible = false

[node name="GameOver_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_jb7g2")
bus = &"SFX"

[node name="Dash_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_0wgn0")
bus = &"SFX"
